--- a/Unit_3/css/style.css
+++ b/Unit_3/css/style.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Linden+Hill|Port+Lligat+Sans|Ramabhadra');
+
 body {
 
-	background-image: url("/Users/sammatluck/Desktop/Online course - Coding/samatluck.github.io/Unit_1/image/sunset3.jpg"); 
+	background-image: url("../image/sunset3.jpg"); 
 	background-repeat: no-repeat;
 	background-position: center;
-	background-color: black;
 	background-size: 1500px 1500px;
 
 
@@ -13,30 +14,33 @@ h1  {
 
 	font-size:65px;
 	color:black;
-	font-family: "Gadget", monospace;
+	font-family: 'Linden Hill', serif;
 
 }
 
 h2 {
+	font-size: 45px;
+	position: relative;
+	left: 110px;
+	top:580px;
+	color:black;
+	font-family: "Port Lligat Sans", Serif;
+}
+h3 {
 
 	font-size: 35px;
 	position: relative;
 	left: 110px;
 	top:550px;
 	color:black;
-	font-family: "Gadget", monospace;
+	font-family: "Port Lligat Sans", Sans-Serif;
 }
-
-h3 {
+h4 {
 
 	font-size: 40px;
 	position: relative;
 	left:1px;
-	top:-75px;
+	top:-180px;
 	color:black;
-	font-family: "Gadget", monospace;
-
-
+	font-family: "Port Lligat Sans", monospace;
 }
-
-/Users/sammatluck/Desktop/Online course - Coding/samatluck.github.io/Unit_1/css/style.css
