--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -43,7 +43,7 @@ footer{
 
 h1  {
 
-	font-size:65px;
+	font-size:100px;
 	color:black;
 	font-family: 'Linden Hill', serif;
 
@@ -117,7 +117,7 @@ h4 {
 	font-family: 'Linden Hill', serif;
 	border-bottom: 4px solid black;
 	text-transform: uppercase;
-}
+}mmm
 
 #FAA {
 	font-size:20px;
